GNOME Font Viewer - 42.0
-------------------------------------------------------------------------------
Fonts 42.0 comes with a port to GTK4 and the following translation updates:
 - Basque
 - Bulgarian
 - Catalan
 - Chinese (China)
 - Croatian
 - Czech
 - Finnish
 - French
 - Friulian
 - Galician
 - Icelandic
 - Indonesian
 - Korean
 - Lithuanian
 - Occitan (post 1500)
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Russian
 - Slovak
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian

GNOME Font Viewer - 42.rc
-------------------------------------------------------------------------------
Fonts 42.rc comes with the following translation updates:
 - Basque
 - Bulgarian
 - Catalan
 - Chinese (China)
 - Croatian
 - Czech
 - Finnish
 - French
 - Galician
 - Indonesian
 - Korean
 - Lithuanian
 - Occitan (post 1500)
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Russian
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian

GNOME Font Viewer - 42.beta
-------------------------------------------------------------------------------
Fonts 42.beta comes with a port to GTK4 by Evan Welsh,
and the following translation updates:
 - Chinese (China)
 - Czech
 - Occitan (post 1500)
 - Portuguese (Brazil)
 - Russian
 - Slovenian

GNOME Font Viewer - 42.alpha
-------------------------------------------------------------------------------
Fonts 42.alpha comes with the following translation updates:
 - Basque
 - Bulgarian
 - Croatian
 - Friulian
 - Galician
 - Icelandic
 - Indonesian
 - Persian
 - Portuguese
 - Slovak
 - Spanish
 - Ukrainian

GNOME Font Viewer - 41.0
-------------------------------------------------------------------------------
Fonts 41 comes with the following translation updates:
 - Catalan
 - Chinese (China)
 - Friulian
 - Hebrew
 - Occitan
 - Russian

GNOME Font Viewer - 40.0
-------------------------------------------------------------------------------
Fonts 40 comes with a slight visual refresh, sporting