@@ -37,6 +37,21 @@
   </kudos>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="43.alpha" date="2022-07-13">
+      <description>
+      <p>Fonts 43.0 comes with the following translation updates:</p>
+        <ul>
+          <li>Dutch</li>
+          <li>Friulian</li>
+          <li>Georgian</li>
+          <li>Hebrew</li>
+          <li>Icelandic</li>
+          <li>Italian</li>
+          <li>Latvian</li>
+          <li>Nepali</li>
+        </ul>
+      </description>
+    </release>
     <release version="42.0" date="2022-03-20">
       <description>
         <p>Fonts 42.0 comes with a port to GTK4 and the following translation updates:</p>
