@@ -1,3 +1,15 @@
+GNOME Font Viewer - 43.alpha
+-------------------------------------------------------------------------------
+Fonts 43.0 comes with the following translation updates:
+ - Dutch
+ - Friulian
+ - Georgian
+ - Hebrew
+ - Icelandic
+ - Italian
+ - Latvian
+ - Nepali
+
 GNOME Font Viewer - 42.0
 -------------------------------------------------------------------------------
 Fonts 42.0 comes with a port to GTK4 and the following translation updates:
